test/shouldPass/expr/lessThanBool.pas
program Sample;
var
  i : boolean = false;

begin
  i := true < false;
  writeln(i)
end.
