test/shouldFail/expr/unMinusBool.pas
program Sample;
var
  i : boolean;

begin
  i := + true;
//     ^^^^^^
// Unary operator '+' cannot be applied to boolean
end.
